Got draw orders working, utilized command module for setting player dependent inputs in the config, and refactored config for readability.

--- a/data/config/FX.ini
+++ b/data/config/FX.ini
@@ -1,3 +1,5 @@
+															;ROTATE
+
 [FX-Rotate]
 SlotList = FXS-Rotate
 KeepInCache = true
@@ -10,6 +12,8 @@ StartTime = 0.0
 EndTime = 2.0
 StartValue = 0.0
 EndValue = 359.0
+
+															;ROTATE QUAD
 
 [FX-RotateQuad]
 SlotList = FXS-RotateQuad
@@ -24,7 +28,7 @@ EndTime = 1.0
 StartValue = 0.0
 EndValue = 90.0
 
-; Scene Transition FX
+															;SCROLL LEFT
 
 [FX-ScrollLeft]
 SlotList = @
@@ -35,8 +39,12 @@ EndTime = 0.5
 StartValue = (0, 0)
 EndValue = (-1920, 0)
 
+															;SCROLL RIGHT
+
 [FX-ScrollRight@FX-ScrollLeft]
 EndValue = (1920, 0)
+
+															;FADE IN
 
 [FXS-FadeIn]
 Type = alpha
@@ -46,16 +54,29 @@ EndValue = 1
 StartTime = 0
 EndTime = 0.4
 
+															;FADE OUT
+
 [FXS-FadeOut@FXS-FadeIn]
 EndValue = -1
 StartTime = 0.6
 EndTime = 1
 
-[FX-SpiraleOutFX]
+															;SPIRAL OUT
+
+[FX-SpiralOut]
 SlotList = FXS-ScaleDown # FXS-RotateCCW
 
-[FX-SpiraleInFX]
+															;SPIRAL IN
+
+[FX-SpiralIn]
 SlotList = FXS-ScaleUp # FXS-RotateCW
+
+															;SCALE UP
+
+[FXS-ScaleUp@FXS-ScaleDown]
+EndValue = 100000
+
+															;SCALE DOWN
 
 [FXS-ScaleDown]
 Type = Scale
@@ -65,6 +86,13 @@ EndTime = 0.5
 StartValue = 1
 EndValue = 0.00001
 
+															;ROTATE CW
+
+[FXS-RotateCW@FXS-RotateCCW]
+EndValue = 1080
+
+															;ROTATE CCW
+
 [FXS-RotateCCW]
 Type = Rotation
 Curve = linear
@@ -72,9 +100,3 @@ StartTime = 0
 EndTime = 0.5
 StartValue = 0
 EndValue = -1080
-
-[FXS-ScaleUp@FXS-ScaleDown]
-EndValue = 100000
-
-[FXS-RotateCW@FXS-RotateCCW]
-EndValue = 1080
