--- a/data/config/Geometry.ini
+++ b/data/config/Geometry.ini
@@ -1,9 +1,13 @@
+															;WALLS
+
 [O-Walls]
 ChildList = O-WallFloor # O-WallCeiling # O-WallLeftWall # O-WallRightWall
 ;O-ArenaBounds Class Data
 MaxElectrificationTime = 0.5
 MaxEmberTime = 10.0
 EmberCreationRate = 0.1
+
+															;WALL
 
 [O-Wall]
 Group = geometry
@@ -28,11 +32,15 @@ Solid = true
 SelfFlags = geometry
 CheckMask = projectileP1 # projectileP2 # pilotP1 # pilotP2 # ship
 
+															;WALL FLOOR
+
 [O-WallFloor@O-Wall]
 Scale = (128, 1, 0)
 Repeat = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the X-value is 128, so the texture repeats 128 times horizontally.
 ;User-Defined
 Pos = (0, 532.5)
+
+															;WALL CEILING
 
 [O-WallCeiling@O-Wall]
 Scale = (128, 1, 0)
@@ -40,11 +48,15 @@ Repeat = (128, 1, 0) ; For tiling. The Y-value is 1, so that the texture is not 
 ;User-Defined
 Pos = (0, -397.5)
 
+															;WALL LEFT WALL
+
 [O-WallLeftWall@O-Wall]
 Scale = (1, 63, 0)
 Repeat = (1, 63, 0) ; For tiling. The Y-value is 1, so that the texture is not repeated vertically, and the Y-value is 63, so the texture repeats 63 times vertically.
 ;User-Defined
 Pos = (-952.5, 67.5)
+
+															;WALL RIGHT WALL
 
 [O-WallRightWall@O-Wall]
 Scale = (1, 63, 0)
