--- a/data/config/Icon.ini
+++ b/data/config/Icon.ini
@@ -1,45 +1,4 @@
-; PILOT ICONS
-
-[O-PilotIcon]
-Group = icon
-Position = @Commands.CalculatePosition
-UseParentSpace = position
-IgnoreFromParent = scale
-;User-Defined
-Pos = (0, 0)
-Depth = O-PilotIcon
-
-[O-Pilot1IconP1@O-PilotIcon]
-Graphic = G-Pilot1
-ChildList = O-Ship1IconP1
-
-[O-Pilot2IconP1@O-PilotIcon]
-Graphic = G-Pilot2
-ChildList = O-Ship2IconP1
-
-[O-Pilot3IconP1@O-PilotIcon]
-Graphic = G-Pilot3
-ChildList = O-Ship3IconP1
-
-[O-Pilot4IconP1@O-PilotIcon]
-Graphic = G-Pilot4
-ChildList = O-Ship4IconP1
-
-[O-Pilot5IconP1@O-PilotIcon]
-Graphic = G-Pilot5
-ChildList = O-Ship5IconP1
-
-[O-Pilot6IconP1@O-PilotIcon]
-Graphic = G-Pilot6
-ChildList = O-Ship6IconP1
-
-[O-Pilot7IconP1@O-PilotIcon]
-Graphic = G-Pilot7
-ChildList = O-Ship7IconP1
-
-[O-Pilot8IconP1@O-PilotIcon]
-Graphic = G-Pilot8
-ChildList = O-Ship8IconP1
+															;PILOT SELECT ICON
 
 [O-PilotSelectIcon@ScrollObject]
 Group = icon
@@ -95,7 +54,50 @@ ChildList = O-Pilot8IconP1
 ;User-Defined
 Pos = (0.375, 0.375)
 
-; SHIP ICONS
+															;PILOT ICON
+
+[O-PilotIcon]
+Group = icon
+Position = @Commands.CalculatePosition
+UseParentSpace = position
+IgnoreFromParent = scale
+;User-Defined
+Pos = (0, 0)
+Depth = O-PilotIcon
+
+[O-Pilot1IconP1@O-PilotIcon]
+Graphic = G-Pilot1
+ChildList = O-Ship1IconP1
+
+[O-Pilot2IconP1@O-PilotIcon]
+Graphic = G-Pilot2
+ChildList = O-Ship2IconP1
+
+[O-Pilot3IconP1@O-PilotIcon]
+Graphic = G-Pilot3
+ChildList = O-Ship3IconP1
+
+[O-Pilot4IconP1@O-PilotIcon]
+Graphic = G-Pilot4
+ChildList = O-Ship4IconP1
+
+[O-Pilot5IconP1@O-PilotIcon]
+Graphic = G-Pilot5
+ChildList = O-Ship5IconP1
+
+[O-Pilot6IconP1@O-PilotIcon]
+Graphic = G-Pilot6
+ChildList = O-Ship6IconP1
+
+[O-Pilot7IconP1@O-PilotIcon]
+Graphic = G-Pilot7
+ChildList = O-Ship7IconP1
+
+[O-Pilot8IconP1@O-PilotIcon]
+Graphic = G-Pilot8
+ChildList = O-Ship8IconP1
+
+															;SHIP ICON
 
 [O-ShipIcon]
 Group = icon
@@ -130,6 +132,8 @@ Graphic = G-Ship7
 
 [O-Ship8IconP1@O-ShipIcon]
 Graphic = G-Ship8
+
+															;ELECTRICITY ICON
 
 [O-ElectricityIcon@ScrollObject]
 Group = icon
