--- a/data/config/LaserPortal.ini
+++ b/data/config/LaserPortal.ini
@@ -1,3 +1,5 @@
+															;LASER PORTAL
+
 [O-LaserPortal@ScrollObject]
 Group = effect
 Position = @Commands.CalculatePosition
@@ -15,6 +17,8 @@ Dynamic = false
 [BP-LaserPortal]
 Type = sphere
 Solid = false
+
+															;LASER PORTAL ENTRANCE
 
 [O-LaserPortalEntrance@O-LaserPortal]
 ;O-LaserPortalEntrance Class Data
@@ -47,6 +51,8 @@ PartList = BP-LaserPortalEntranceP2
 [BP-LaserPortalEntranceP2@BP-LaserPortal]
 SelfFlags = space
 CheckMask = projectileP2
+
+															;LASER PORTAL EXIT
 
 [O-LaserPortalExitP1@O-LaserPortal]
 Graphic = G-LaserPortalExitP1
