--- a/data/config/Pilot.ini
+++ b/data/config/Pilot.ini
@@ -1,3 +1,5 @@
+															;PILOT
+
 [O-Pilot]
 Group = pilot
 Position = @Commands.CalculatePosition
@@ -5,6 +7,15 @@ HighSpeed = true ; For high velocity objects, this property should be set to tru
 AnimationSet = AS-Pilot
 ;User-Defined
 Depth = O-Pilot
+PauseInput = @Commands.CalculatePauseInput
+LeftInput = @Commands.CalculateLeftInput
+RightInput = @Commands.CalculateRightInput
+LeftRightInput = @Commands.CalculateLeftRightInput
+UpInput = @Commands.CalculateUpInput
+DownInput = @Commands.CalculateDownInput
+UpDownInput = @Commands.CalculateUpDownInput
+DashInput = @Commands.CalculateDashInput
+ParryInput = @Commands.CalculateParryInput
 MaxIFrames = 1.0 ; Ensure that this value is equal to @TT-IFramesFlash duration / 60.
 IFrameFlashInterval = 0.1
 
@@ -36,27 +47,21 @@ KeyDuration = 1.0
 [A-PilotRun]
 KeyDuration = 0.1
 
+															;PILOT P1
+
 [O-PilotP1]
 Body = B-PilotP1
 Position = (-512, 350, 0)
 ShaderList = SH-OutlineP1
 ;User-Defined
 Pos = (-512, 350)
-PauseInput = PauseP1
-UpInput = UpP1
-LeftInput = LeftP1
-DownInput = DownP1
-RightInput = RightP1
-LeftRightInput = LeftRightP1
-UpDownInput = UpDownP1
-DashInput = DashP1
-ParryInput = ParryP1
-MeleeInput = NeutralP1
-JumpInput = DownwardP1
+PlayerType = P1
 
 [BP-PilotP1@BP-Pilot]
 SelfFlags = pilotP1
 CheckMask = geometry # space # projectileP2
+
+															;PILOT P2
 
 [O-PilotP2]
 Body = B-PilotP2
@@ -65,23 +70,13 @@ Flip = x
 ShaderList = SH-OutlineP2
 ;User-Defined
 Pos = (512, 350)
-PauseInput = PauseP2
-UpInput = UpP2
-LeftInput = LeftP2
-DownInput = DownP2
-RightInput = RightP2
-LeftRightInput = LeftRightP2
-UpDownInput = UpDownP2
-DashInput = DashP2
-ParryInput = ParryP2
-MeleeInput = NeutralP2
-JumpInput = DownwardP2
+PlayerType = P2
 
 [BP-PilotP2@BP-Pilot]
 SelfFlags = pilotP2
 CheckMask = geometry # space # projectileP1
 
-;Specific Pilots
+															;PILOT 1
 
 [O-Pilot1@O-Pilot]
 Graphic = G-Pilot1
@@ -124,6 +119,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 1 P1
+
 [O-Pilot1P1@O-Pilot1]
 Body = B-Pilot1P1
 Position = @O-PilotP1
@@ -132,17 +129,7 @@ ChildList = O-Ship1P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot1P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee1P1
@@ -153,6 +140,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 1 P2
+
 [O-Pilot1P2@O-Pilot1]
 Body = B-Pilot1P2
 Position = @O-PilotP2
@@ -162,17 +151,7 @@ ChildList = O-Ship1P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot1P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee1P2
@@ -182,6 +161,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 2
 
 [O-Pilot2@O-Pilot]
 Graphic = G-Pilot2
@@ -224,6 +205,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 2 P1
+
 [O-Pilot2P1@O-Pilot2]
 Body = B-Pilot2P1
 Position = @O-PilotP1
@@ -232,17 +215,7 @@ ChildList = O-Ship2P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot2P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee2P1
@@ -253,6 +226,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 2 P2
+
 [O-Pilot2P2@O-Pilot2]
 Body = B-Pilot2P2
 Position = @O-PilotP2
@@ -262,17 +237,7 @@ ChildList = O-Ship2P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot2P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee2P2
@@ -282,6 +247,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 3
 
 [O-Pilot3@O-Pilot]
 Graphic = G-Pilot3
@@ -324,6 +291,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 3 P1
+
 [O-Pilot3P1@O-Pilot3]
 Body = B-Pilot3P1
 Position = @O-PilotP1
@@ -332,17 +301,7 @@ ChildList = O-Ship3P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot3P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee3P1
@@ -353,6 +312,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 3 P2
+
 [O-Pilot3P2@O-Pilot3]
 Body = B-Pilot3P2
 Position = @O-PilotP2
@@ -362,17 +323,7 @@ ChildList = O-Ship3P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot3P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee3P2
@@ -382,6 +333,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 4
 
 [O-Pilot4@O-Pilot]
 Graphic = G-Pilot4
@@ -424,6 +377,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 4 P1
+
 [O-Pilot4P1@O-Pilot4]
 Body = B-Pilot4P1
 Position = @O-PilotP1
@@ -432,17 +387,7 @@ ChildList = O-Ship4P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot4P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee4P1
@@ -453,6 +398,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 4 P2
+
 [O-Pilot4P2@O-Pilot4]
 Body = B-Pilot4P2
 Position = @O-PilotP2
@@ -462,17 +409,7 @@ ChildList = O-Ship4P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot4P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee4P2
@@ -482,6 +419,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 5
 
 [O-Pilot5@O-Pilot]
 Graphic = G-Pilot5
@@ -525,6 +464,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 5 P1
+
 [O-Pilot5P1@O-Pilot5]
 Body = B-Pilot5P1
 Position = @O-PilotP1
@@ -533,17 +474,7 @@ ChildList = O-Ship5P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot5P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee5P1
@@ -554,6 +485,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 5 P2
+
 [O-Pilot5P2@O-Pilot5]
 Body = B-Pilot5P2
 Position = @O-PilotP2
@@ -563,17 +496,7 @@ ChildList = O-Ship5P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot5P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee5P2
@@ -583,6 +506,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 6
 
 [O-Pilot6@O-Pilot]
 Graphic = G-Pilot6
@@ -626,6 +551,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 6 P1
+
 [O-Pilot6P1@O-Pilot6]
 Body = B-Pilot6P1
 Position = @O-PilotP1
@@ -634,17 +561,7 @@ ChildList = O-Ship6P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot6P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee6P1
@@ -655,6 +572,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 6 P2
+
 [O-Pilot6P2@O-Pilot6]
 Body = B-Pilot6P2
 Position = @O-PilotP2
@@ -664,17 +583,7 @@ ChildList = O-Ship6P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot6P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee6P2
@@ -684,6 +593,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 7
 
 [O-Pilot7@O-Pilot]
 Graphic = G-Pilot7
@@ -726,6 +637,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 7 P1
+
 [O-Pilot7P1@O-Pilot7]
 Body = B-Pilot7P1
 Position = @O-PilotP1
@@ -734,17 +647,7 @@ ChildList = O-Ship7P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot7P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee7P1
@@ -755,6 +658,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 7 P2
+
 [O-Pilot7P2@O-Pilot7]
 Body = B-Pilot7P2
 Position = @O-PilotP2
@@ -764,17 +669,7 @@ ChildList = O-Ship7P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot7P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee7P2
@@ -784,6 +679,8 @@ TopLeft = (-16, -16, 0)
 BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
+
+															;PILOT 8
 
 [O-Pilot8@O-Pilot]
 Graphic = G-Pilot8
@@ -826,6 +723,8 @@ Texture = soldier_full.png
 TextureOrigin = (0, 0, 0)
 TextureSize = (32, 32, 0)
 
+															;PILOT 8 P1
+
 [O-Pilot8P1@O-Pilot8]
 Body = B-Pilot8P1
 Position = @O-PilotP1
@@ -834,17 +733,7 @@ ChildList = O-Ship8P1 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP1
-PauseInput = @O-PilotP1
-UpInput = @O-PilotP1
-LeftInput = @O-PilotP1
-DownInput = @O-PilotP1
-RightInput = @O-PilotP1
-LeftRightInput = @O-PilotP1
-UpDownInput = @O-PilotP1
-DashInput = @O-PilotP1
-ParryInput = @O-PilotP1
-MeleeInput = @O-PilotP1
-JumpInput = @O-PilotP1
+PlayerType = @O-PilotP1
 
 [B-Pilot8P1@B-Pilot]
 PartList = BP-PilotP1 # BP-Melee8P1
@@ -855,6 +744,8 @@ BottomRight = (16, 16, 0)
 SelfFlags = space
 CheckMask = pilotP2
 
+															;PILOT 8 P2
+
 [O-Pilot8P2@O-Pilot8]
 Body = B-Pilot8P2
 Position = @O-PilotP2
@@ -864,17 +755,7 @@ ChildList = O-Ship8P2 # O-HeadsUpText # O-Melee # O-Parry
 ChildJointList = J-Weld
 ;User-Defined
 Pos = @O-PilotP2
-PauseInput = @O-PilotP2
-UpInput = @O-PilotP2
-LeftInput = @O-PilotP2
-DownInput = @O-PilotP2
-RightInput = @O-PilotP2
-LeftRightInput = @O-PilotP2
-UpDownInput = @O-PilotP2
-DashInput = @O-PilotP2
-ParryInput = @O-PilotP2
-MeleeInput = @O-PilotP2
-JumpInput = @O-PilotP2
+PlayerType = @O-PilotP2
 
 [B-Pilot8P2@B-Pilot]
 PartList = BP-PilotP2 # BP-Melee8P2
@@ -885,13 +766,13 @@ BottomRight = (0, 16, 0)
 SelfFlags = space
 CheckMask = pilotP1
 
-;Melee
+															;MELEE
 
 [BP-Melee]
 Type = box
 Solid = false
 
-;Zone
+															;ZONE
 
 [O-Zone]
 Body = B-Zone
@@ -914,13 +795,14 @@ Position = (-960, -405, 0)
 [O-ZoneP2@O-Zone]
 Position = (0, -405, 0)
 
-;Text
+															;TEXT
 
-[O-HeadsUpText@ScrollObject]
+[O-HeadsUpText@O-Text]
 Graphic = G-HeadsUpText
-Position = (0, -1, 0)
 Scale = (1.25, 1.25, 1.25)
 UseParentSpace = both
+;User-Defined
+Pos = (0, -1)
 
 [G-HeadsUpText]
 Text = T-HeadsUpText
