--- a/data/config/Projectile.ini
+++ b/data/config/Projectile.ini
@@ -1,3 +1,5 @@
+															;PROJECTILE
+
 [O-Projectile]
 LifeTime = 5.0
 HighSpeed = true ; For high velocity objects, this property should be set to true to avoid collision errors (though it's more expensive).
@@ -17,6 +19,8 @@ CustomGravity = (0.0, 0.0, 0.0)
 [BP-Projectile]
 Solid = false
 
+															;LASER
+
 [O-Laser@O-Projectile]
 Group = projectileSmall
 Position = @Commands.CalculatePosition
@@ -27,6 +31,8 @@ Speed = 1000
 
 [BP-Laser@BP-Projectile]
 Type = box
+
+															;LASER P1
 
 [O-LaserP1@O-Laser]
 Graphic = G-LaserP1
@@ -42,6 +48,8 @@ PartList = BP-LaserP1
 SelfFlags = projectileP1
 CheckMask = geometry # space # pilotP2 # projectileP1
 
+															;LASER P2
+
 [O-LaserP2@O-Laser]
 Graphic = G-LaserP2
 Body = B-LaserP2
@@ -56,11 +64,15 @@ PartList = BP-LaserP2
 SelfFlags = projectileP2
 CheckMask = geometry # space # pilotP1 # projectileP2
 
+															;LASER GATE LASER NEAR P1
+
 [O-LaserGateLaserNearP1@O-LaserP1]
 Scale = (1.0, 2.0)
 Speed = 0.0
 Pivot = bottom
 LifeTime = @O-LaserGate
+
+															;LASER GATE LASER FAR P1
 
 [O-LaserGateLaserFarP1@O-LaserP1]
 Scale = (1.0, 2.0)
@@ -68,11 +80,15 @@ Speed = 0.0
 Pivot = top
 LifeTime = @O-LaserGate
 
+															;LASER GATE LASER NEAR P2
+
 [O-LaserGateLaserNearP2@O-LaserP2]
 Scale = (1.0, 2.0)
 Speed = 0.0
 Pivot = bottom
 LifeTime = @O-LaserGate
+
+															;LASER GATE LASER FAR P2
 
 [O-LaserGateLaserFarP2@O-LaserP2]
 Scale = (1.0, 2.0)
@@ -80,16 +96,22 @@ Speed = 0.0
 Pivot = top
 LifeTime = @O-LaserGate
 
-; Begin note: Once I have all of my actual textures in place (and they're oriented correctly from the outset), I can probably get rid of these two objects
+; BEGIN note: Once I have all of my actual textures in place (and they're oriented correctly from the outset), I can probably get rid of these two objects
+
+															;LASER ROTATED P1
 
 [O-LaserRotatedP1@O-LaserP1]
 Rotation = 90.0
+
+															;LASER ROTATED P2
 
 [O-LaserRotatedP2@O-LaserP2]
 Rotation = 90.0
 
 
-; End note
+; END note
+
+															;LASER PRISM P1
 
 [O-LaserPrismP1@O-LaserP1]
 Body = B-LaserPrismP1
@@ -101,6 +123,8 @@ PartList = BP-LaserPrismP1
 SelfFlags = projectileP1
 CheckMask = geometry # space # pilotP2
 
+															;LASER PRISM P2
+
 [O-LaserPrismP2@O-LaserP2]
 Body = B-LaserPrismP2
 
@@ -110,6 +134,8 @@ PartList = BP-LaserPrismP2
 [BP-LaserPrismP2@BP-LaserP2]
 SelfFlags = projectileP2
 CheckMask = geometry # space # pilotP1
+
+															;LASER HEATSEEKING
 
 [O-LaserHeatseeking@O-Projectile]
 Group = projectileSmall
@@ -121,6 +147,8 @@ Speed = 1000
 
 [BP-LaserHeatseeking@BP-Projectile]
 Type = box
+
+															;LASER HEATSEEKING P1
 
 [O-LaserHeatseekingP1@O-LaserHeatseeking]
 Graphic = G-LaserHeatseekingP1
@@ -136,6 +164,8 @@ PartList = BP-LaserHeatseekingP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;LASER HEATSEEKING P2
+
 [O-LaserHeatseekingP2@O-LaserHeatseeking]
 Graphic = G-LaserHeatseekingP2
 Body = B-LaserHeatseekingP2
@@ -150,6 +180,8 @@ PartList = BP-LaserHeatseekingP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;LASER WALL
+
 [O-LaserWall@O-Projectile]
 Group = projectileMedium
 Position = @Commands.CalculatePosition
@@ -162,6 +194,8 @@ GrowthSpeed = 1
 
 [BP-LaserWall@BP-Projectile]
 Type = box
+
+															;LASER WALL P1
 
 [O-LaserWallP1@O-LaserWall]
 Graphic = G-LaserWallP1
@@ -177,6 +211,8 @@ PartList = BP-LaserWallP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;LASER WALL P2
+
 [O-LaserWallP2@O-LaserWall]
 Graphic = G-LaserWallP2
 Body = B-LaserWallP2
@@ -190,6 +226,8 @@ PartList = BP-LaserWallP2
 [BP-LaserWallP2@BP-LaserWall]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;LASER GATE
 
 [O-LaserGate@O-Projectile]
 Group = projectileSmall
@@ -205,6 +243,8 @@ LaserExpansionSpeed = 1.5
 [BP-LaserGate@BP-Projectile]
 Type = box
 
+															;LASER GATE P1
+
 [O-LaserGateP1@O-LaserGate]
 Graphic = G-LaserGateP1
 Body = B-LaserGateP1
@@ -218,6 +258,8 @@ PartList = BP-LaserGateP1
 [BP-LaserGateP1@BP-LaserGate]
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
+
+															;LASER GATE P2
 
 [O-LaserGateP2@O-LaserGate]
 Graphic = G-LaserGateP2
@@ -233,6 +275,8 @@ PartList = BP-LaserGateP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;ORB
+
 [O-Orb@O-Projectile]
 Group = projectileSmall
 Position = @Commands.CalculatePosition
@@ -246,6 +290,8 @@ IsBouncy = true
 [BP-Orb@BP-Projectile]
 Type = sphere
 Restitution = 1.0 ; A restitution of one to allow for "perfect" bouncing.
+
+															;ORB P1
 
 [O-OrbP1@O-Orb]
 Graphic = G-OrbP1
@@ -261,6 +307,8 @@ PartList = BP-OrbP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;ORB P2
+
 [O-OrbP2@O-Orb]
 Graphic = G-OrbP2
 Body = B-OrbP2
@@ -274,6 +322,8 @@ PartList = BP-OrbP2
 [BP-OrbP2@BP-Orb]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;MEDUSSA HEAD
 
 [O-MedussaHead@O-Projectile]
 Group = projectileSmall
@@ -293,6 +343,8 @@ MaxSwayTime = 1.5
 [BP-MedussaHead@BP-Projectile]
 Type = box
 
+															;MEDUSSA HEAD P1
+
 [O-MedussaHeadP1@O-MedussaHead]
 Graphic = G-MedussaHeadP1
 Body = B-MedussaHeadP1
@@ -307,6 +359,8 @@ PartList = BP-MedussaHeadP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;MEDUSSA HEAD P2
+
 [O-MedussaHeadP2@O-MedussaHead]
 Graphic = G-MedussaHeadP2
 Body = B-MedussaHeadP2
@@ -320,6 +374,8 @@ PartList = BP-MedussaHeadP2
 [BP-MedussaHeadP2@BP-MedussaHead]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;MISSILE
 
 [O-Missile@O-Projectile]
 Group = projectileSmall
@@ -336,6 +392,8 @@ FiringDirection = (0, 0)
 [BP-Missile@BP-Projectile]
 Type = box
 
+															;MISSILE P1
+
 [O-MissileP1@O-Missile]
 Graphic = G-MissileP1
 Body = B-MissileP1
@@ -350,6 +408,8 @@ PartList = BP-MissileP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;MISSILE P2
+
 [O-MissileP2@O-Missile]
 Graphic = G-MissileP2
 Body = B-MissileP2
@@ -363,6 +423,8 @@ PartList = BP-MissileP2
 [BP-MissileP2@BP-Missile]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;GRENADE
 
 [O-Grenade@O-Projectile]
 Group = projectileSmall
@@ -382,6 +444,8 @@ CustomGravity = (0, 1000, 0)
 [BP-Grenade@BP-Projectile]
 Type = sphere
 
+															;GRENADE P1
+
 [O-GrenadeP1@O-Grenade]
 Graphic = G-GrenadeP1
 Body = B-GrenadeP1
@@ -396,6 +460,8 @@ PartList = BP-GrenadeP1
 [BP-GrenadeP1@BP-Grenade]
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
+
+															;GRENADE P2
 
 [O-GrenadeP2@O-Grenade]
 Graphic = G-GrenadeP2
@@ -412,6 +478,8 @@ PartList = BP-GrenadeP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;TURRET
+
 [O-Turret@O-Projectile]
 Group = projectileSmall
 Position = @Commands.CalculatePosition
@@ -423,6 +491,8 @@ Speed = 800
 
 [BP-Turret@BP-Projectile]
 Type = box
+
+															;TURRET P1
 
 [O-TurretP1@O-Turret]
 Graphic = G-TurretP1
@@ -439,6 +509,8 @@ PartList = BP-TurretP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;TURRET P2
+
 [O-TurretP2@O-Turret]
 Graphic = G-TurretP2
 Body = B-TurretP2
@@ -453,6 +525,8 @@ PartList = BP-TurretP2
 [BP-TurretP2@BP-Turret]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;PRISM
 
 [O-Prism@O-Projectile]
 Group = projectileMedium
@@ -472,6 +546,8 @@ WaveSize = 5
 Type = box
 Restitution = 1.0 ; A restitution of one to allow for "perfect" bouncing.
 
+															;PRISM P1
+
 [O-PrismP1@O-Prism]
 Graphic = G-PrismP1
 Body = B-PrismP1
@@ -487,6 +563,8 @@ PartList = BP-PrismP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2 # projectileP1
 
+															;PRISM P2
+
 [O-PrismP2@O-Prism]
 Graphic = G-PrismP2
 Body = B-PrismP2
@@ -501,6 +579,8 @@ PartList = BP-PrismP2
 [BP-PrismP2@BP-Prism]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1 # projectileP2
+
+															;SPACER
 
 [O-Spacer@O-Projectile]
 Group = projectileMedium
@@ -520,6 +600,8 @@ RotationSpeed = 1.5
 Type = box
 Restitution = 1.0 ; A restitution of one to allow for "perfect" bouncing.
 
+															;SPACER P1
+
 [O-SpacerP1@O-Spacer]
 Graphic = G-SpacerP1
 Body = B-SpacerP1
@@ -535,6 +617,8 @@ PartList = BP-SpacerP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;SPACER P2
+
 [O-SpacerP2@O-Spacer]
 Graphic = G-SpacerP2
 Body = B-SpacerP2
@@ -549,6 +633,8 @@ PartList = BP-SpacerP2
 [BP-SpacerP2@BP-Spacer]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;BEAM
 
 [O-Beam@O-Projectile]
 Group = projectileTethered
@@ -571,6 +657,8 @@ FixedRotation = false ; Required because a FixedRotation of true breaks the weld
 Type = box
 Density = 0.00000001
 
+															;BEAM P1
+
 [O-BeamP1@O-Beam]
 Graphic = G-BeamP1
 Body = B-BeamP1
@@ -584,6 +672,8 @@ PartList = BP-BeamP1
 [BP-BeamP1@BP-Beam]
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
+
+															;BEAM P2
 
 [O-BeamP2@O-Beam]
 Graphic = G-BeamP2
@@ -599,6 +689,8 @@ PartList = BP-BeamP2
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
 
+															;FAMILIAR
+
 [O-Familiar@O-Projectile]
 Group = projectileSmall
 Position = @Commands.CalculatePosition
@@ -612,6 +704,8 @@ FramesBehind = 10 ; The number of movement frames behind which the Familiar lags
 
 [BP-Familiar@BP-Projectile]
 Type = box
+
+															;FAMILIAR P1
 
 [O-FamiliarP1@O-Familiar]
 Graphic = G-FamiliarP1
@@ -628,6 +722,8 @@ PartList = BP-FamiliarP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;FAMILIAR P2
+
 [O-FamiliarP2@O-Familiar]
 Graphic = G-FamiliarP2
 Body = B-FamiliarP2
@@ -643,6 +739,8 @@ PartList = BP-FamiliarP2
 [BP-FamiliarP2@BP-Familiar]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;PUPPET
 
 [O-Puppet@O-Projectile]
 Group = projectileTethered
@@ -661,6 +759,8 @@ Pivot = bottom
 [BP-Puppet@BP-Projectile]
 Type = box
 
+															;PUPPET P1
+
 [O-PuppetP1@O-Puppet]
 Graphic = G-PuppetP1
 Body = B-PuppetP1
@@ -675,6 +775,8 @@ PartList = BP-PuppetP1
 SelfFlags = projectileP1
 CheckMask = geometry # pilotP2
 
+															;PUPPET P2
+
 [O-PuppetP2@O-Puppet]
 Graphic = G-PuppetP2
 Body = B-PuppetP2
@@ -688,6 +790,8 @@ PartList = BP-PuppetP2
 [BP-PuppetP2@BP-Puppet]
 SelfFlags = projectileP2
 CheckMask = geometry # pilotP1
+
+															;SHRAPNEL
 
 [O-Shrapnel@O-Projectile]
 Group = projectileSmall
@@ -707,6 +811,8 @@ CustomGravity = (0, 400, 0)
 [BP-Shrapnel@BP-Projectile]
 Type = box
 
+															;SHRAPNEL P1
+
 [O-ShrapnelP1@O-Shrapnel]
 Graphic = G-ShrapnelP1
 Body = B-ShrapnelP1
@@ -720,6 +826,8 @@ PartList = BP-ShrapnelP1
 [BP-ShrapnelP1@BP-Shrapnel]
 SelfFlags = projectileP1
 CheckMask = pilotP2
+
+															;SHRAPNEL P2
 
 [O-ShrapnelP2@O-Shrapnel]
 Graphic = G-ShrapnelP2
@@ -735,6 +843,8 @@ PartList = BP-ShrapnelP2
 SelfFlags = projectileP2
 CheckMask = pilotP1
 
+															;MISSILE SHIELD
+
 [O-MissileShield@O-Projectile]
 Group = projectileLarge
 Position = @Commands.CalculatePosition
@@ -748,6 +858,8 @@ MaxMissileSpawnInterval = 0.1
 
 [BP-MissileShield@BP-Projectile]
 Type = box
+
+															;MISSILE SHIELD P1
 
 [O-MissileShieldP1@O-MissileShield]
 Graphic = G-MissileShieldP1
@@ -763,6 +875,8 @@ PartList = BP-MissileShieldP1
 SelfFlags = projectileP1
 CheckMask = geometry # space # pilotP2
 
+															;MISSILE SHIELD P2
+
 [O-MissileShieldP2@O-MissileShield]
 Graphic = G-MissileShieldP2
 Body = B-MissileShieldP2
@@ -777,6 +891,8 @@ PartList = BP-MissileShieldP2
 SelfFlags = projectileP2
 CheckMask = geometry # space # pilotP1
 
+															;EXPLOSION
+
 [O-Explosion@O-Projectile]
 Group = projectileLarge
 Position = @Commands.CalculatePosition
@@ -789,6 +905,8 @@ GrowthSpeed = 3
 
 [BP-Explosion@BP-Projectile]
 Type = sphere
+
+															;EXPLOSION P1
 
 [O-ExplosionP1@O-Explosion]
 Graphic = G-ExplosionP1
@@ -804,6 +922,8 @@ PartList = BP-ExplosionP1
 SelfFlags = projectileP1
 CheckMask = pilotP2
 
+															;EXPLOSION P2
+
 [O-ExplosionP2@O-Explosion]
 Graphic = G-ExplosionP2
 Body = B-ExplosionP2
@@ -817,6 +937,8 @@ PartList = BP-ExplosionP2
 [BP-ExplosionP2@BP-Explosion]
 SelfFlags = projectileP2
 CheckMask = pilotP1
+
+															;EMBER
 
 [O-Ember@O-Projectile]
 Group = projectileSmall
@@ -836,6 +958,8 @@ MaxSwayTime = 1.5
 [BP-Ember@BP-Projectile]
 Type = sphere
 
+															;EMBER P1
+
 [O-EmberP1@O-Ember]
 Graphic = G-EmberP1
 Body = B-EmberP1
@@ -849,6 +973,8 @@ PartList = BP-EmberP1
 [BP-EmberP1@BP-Ember]
 SelfFlags = projectileP1
 CheckMask = pilotP2
+
+															;EMBER P2
 
 [O-EmberP2@O-Ember]
 Graphic = G-EmberP2
@@ -864,6 +990,8 @@ PartList = BP-EmberP2
 SelfFlags = projectileP2
 CheckMask = pilotP1
 
+															;SHOCKWAVE
+
 [O-Shockwave@O-Projectile]
 Group = projectileSmall
 Position = @Commands.CalculatePosition
@@ -877,6 +1005,8 @@ Speed = 200
 
 [BP-Shockwave@BP-Projectile]
 Type = sphere
+
+															;SHOCKWAVE P1
 
 [O-ShockwaveP1@O-Shockwave]
 Graphic = G-ShockwaveP1
@@ -892,6 +1022,8 @@ PartList = BP-ShockwaveP1
 SelfFlags = projectileP1
 CheckMask = pilotP2
 
+															;SHOCKWAVE P2
+
 [O-ShockwaveP2@O-Shockwave]
 Graphic = G-ShockwaveP2
 Body = B-ShockwaveP2
@@ -902,6 +1034,6 @@ Texture = SpaceShooterRedux/PNG/Meteors/meteorBrown_small2.png
 [B-ShockwaveP2@B-Shockwave]
 PartList = BP-ShockwaveP2
 
-[BP-ShockwaveP1@BP-Shockwave]
+[BP-ShockwaveP2@BP-Shockwave]
 SelfFlags = projectileP2
 CheckMask = pilotP1
