--- a/data/config/Shader.ini
+++ b/data/config/Shader.ini
@@ -1,3 +1,5 @@
+															;OUTLINE
+
 [SH-Outline]
 ParamList = texture # BorderColorStart # BorderColorEnd # BorderThicknessX # BorderThicknessY # PulseTime # AgeInSeconds # OpacityLimit
 BorderThicknessX = 0.025 ; Relative to the size (width) of the texture, so it must be between 0.0 and 1.0, but even smaller values can become too large quickly.
@@ -63,23 +65,33 @@ void main()
 	}
 }"
 
+															;OUTLINE P1
+
 [SH-OutlineP1@SH-Outline]
 BorderColorStart = (0.0, 1.0, 1.0) ; cyan
 BorderColorEnd = (0.0, 0.0, 1.0) ; blue
+
+															;OUTLINE P2
 
 [SH-OutlineP2@SH-Outline]
 BorderColorStart = (1.0, 0.0, 1.0) ; magenta
 BorderColorEnd = (1.0, 0.0, 0.0) ; red
 
+															;OUTLINE P1 AND P2
+
 [SH-OutlineP1AndP2@SH-Outline]
 BorderColorStart = (1.0, 1.0, 0.0) ; yellow
 BorderColorEnd = (0.0, 1.0, 0.0) ; green
+
+															;OUTLINE TEXT
 
 [SH-OutlineText@SH-Outline]
 BorderThicknessX = 0.0005
 BorderThicknessY = 0.0005
 BorderColorStart = (0.0, 1.0, 1.0) ; cyan
 BorderColorEnd = (0.0, 0.0, 1.0) ; blue
+
+															;COLOR
 
 [SH-Color]
 ParamList = texture # Color
@@ -95,6 +107,8 @@ void main() {
     gl_FragColor.b = Color.b;
     gl_FragColor.a = textureCol.a;
 }"
+
+															;COLOR WHITE
 
 [SH-ColorWhite@SH-Color]
 Color = (1.0, 1.0, 1.0)
