--- a/data/config/Ship.ini
+++ b/data/config/Ship.ini
@@ -1,3 +1,5 @@
+															;SHIP
+
 [O-Ship]
 Group = ship
 Position = @Commands.CalculatePosition
@@ -22,14 +24,18 @@ Density = 0.1
 SelfFlags = ship
 CheckMask = geometry
 
+															;SHIP P1
+
 [O-ShipP1]
 ShaderList = SH-OutlineP1
+
+															;SHIP P2
 
 [O-ShipP2]
 Flip = y
 ShaderList = SH-OutlineP2
 
-;Specific Ships
+															;SHIP 1
 
 [O-Ship1@O-Ship]
 Graphic = G-Ship1
@@ -37,10 +43,14 @@ Graphic = G-Ship1
 [G-Ship1@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip1_green.png
 
+															;SHIP 1 P1
+
 [O-Ship1P1@O-Ship1]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun1P1 # O-UpwardGun1P1 # O-DownwardGun1P1 # O-SuperGun1P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 1 P2
 
 [O-Ship1P2@O-Ship1]
 Flip = @O-ShipP2
@@ -48,16 +58,22 @@ ShaderList = @O-ShipP2
 ChildList = O-NeutralGun1P2 # O-UpwardGun1P2 # O-DownwardGun1P2 # O-SuperGun1P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
+															;SHIP 2
+
 [O-Ship2@O-Ship]
 Graphic = G-Ship2
 
 [G-Ship2@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip2_green.png
 
+															;SHIP 2 P1
+
 [O-Ship2P1@O-Ship2]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun2P1 # O-UpwardGun2P1 # O-DownwardGun2P1 # O-SuperGun2P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 2 P2
 
 [O-Ship2P2@O-Ship2]
 Flip = @O-ShipP2
@@ -65,22 +81,30 @@ ShaderList = @O-ShipP2
 ChildList = O-NeutralGun2P2 # O-UpwardGun2P2 # O-DownwardGun2P2 # O-SuperGun2P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
 
+															;SHIP 3
+
 [O-Ship3@O-Ship]
 Graphic = G-Ship3
 
 [G-Ship3@G-Ship]
 Texture = SpaceShooterRedux/PNG/playerShip3_green.png
 
+															;SHIP 3 P1
+
 [O-Ship3P1@O-Ship3]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun3P1 # O-UpwardGun3P1 # O-DownwardGun3P1 # O-SuperGun3P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 3 P2
 
 [O-Ship3P2@O-Ship3]
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun3P2 # O-UpwardGun3P2 # O-DownwardGun3P2 # O-SuperGun3P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 4
 
 [O-Ship4@O-Ship]
 Graphic = G-Ship4
@@ -89,16 +113,22 @@ Graphic = G-Ship4
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen1.png
 Flip = y
 
+															;SHIP 4 P1
+
 [O-Ship4P1@O-Ship4]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun4P1 # O-UpwardGun4P1 # O-DownwardGun4P1 # O-SuperGun4P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 4 P2
 
 [O-Ship4P2@O-Ship4]
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun4P2 # O-UpwardGun4P2 # O-DownwardGun4P2 # O-SuperGun4P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 5
 
 [O-Ship5@O-Ship]
 Graphic = G-Ship5
@@ -107,16 +137,22 @@ Graphic = G-Ship5
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen2.png
 Flip = y
 
+															;SHIP 5 P1
+
 [O-Ship5P1@O-Ship5]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun5P1 # O-UpwardGun5P1 # O-DownwardGun5P1 # O-SuperGun5P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 5 P2
 
 [O-Ship5P2@O-Ship5]
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun5P2 # O-UpwardGun5P2 # O-DownwardGun5P2 # O-SuperGun5P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 6
 
 [O-Ship6@O-Ship]
 Graphic = G-Ship6
@@ -125,16 +161,22 @@ Graphic = G-Ship6
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen3.png
 Flip = y
 
+															;SHIP 6 P1
+
 [O-Ship6P1@O-Ship6]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun6P1 # O-UpwardGun6P1 # O-DownwardGun6P1 # O-SuperGun6P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 6 P2
 
 [O-Ship6P2@O-Ship6]
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun6P2 # O-UpwardGun6P2 # O-DownwardGun6P2 # O-SuperGun6P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 7
 
 [O-Ship7@O-Ship]
 Graphic = G-Ship7
@@ -143,16 +185,22 @@ Graphic = G-Ship7
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen4.png
 Flip = y
 
+															;SHIP 7 P1
+
 [O-Ship7P1@O-Ship7]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun7P1 # O-UpwardGun7P1 # O-DownwardGun7P1 # O-SuperGun7P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 7 P2
 
 [O-Ship7P2@O-Ship7]
 Flip = @O-ShipP2
 ShaderList = @O-ShipP2
 ChildList = O-NeutralGun7P2 # O-UpwardGun7P2 # O-DownwardGun7P2 # O-SuperGun7P2
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 8
 
 [O-Ship8@O-Ship]
 Graphic = G-Ship8
@@ -161,10 +209,14 @@ Graphic = G-Ship8
 Texture = SpaceShooterRedux/PNG/Enemies/enemyGreen5.png
 Flip = y
 
+															;SHIP 8 P1
+
 [O-Ship8P1@O-Ship8]
 ShaderList = @O-ShipP1
 ChildList = O-NeutralGun8P1 # O-UpwardGun8P1 # O-DownwardGun8P1 # O-SuperGun8P1
 ChildJointList = J-Weld # J-Weld # J-Weld # J-Weld
+
+															;SHIP 8 P2
 
 [O-Ship8P2@O-Ship8]
 Flip = @O-ShipP2
