--- a/data/config/Spawner.ini
+++ b/data/config/Spawner.ini
@@ -1,104 +1,174 @@
+															;SPAWNER (OBJECT)
+
 [O-Spawner]
 UseParentSpace = position
+
+															;SPAWNER
 
 [SP-Spawner]
 CleanOnDelete = true ; Enforces the destruction of spawned objects upon that of their spawner.
 
+															;LASER P1
+
 [SP-LaserP1@SP-Spawner]
 Object = O-LaserP1
+
+															;LASER P2
 
 [SP-LaserP2@SP-Spawner]
 Object = O-LaserP2
 
+															;LASER HEATSEEKING P1
+
 [SP-LaserHeatseekingP1@SP-Spawner]
 Object = O-LaserHeatseekingP1
+
+															;LASER HEATSEEKING P2
 
 [SP-LaserHeatseekingP2@SP-Spawner]
 Object = O-LaserHeatseekingP2
 
+															;LASER WALL P1
+
 [SP-LaserWallP1@SP-Spawner]
 Object = O-LaserWallP1
+
+															;LASER WALL P2
 
 [SP-LaserWallP2@SP-Spawner]
 Object = O-LaserWallP2
 
+															;LASER GATE P1
+
 [SP-LaserGateP1@SP-Spawner]
 Object = O-LaserGateP1
+
+															;LASER GATE P2
 
 [SP-LaserGateP2@SP-Spawner]
 Object = O-LaserGateP2
 
+															;ORB P1
+
 [SP-OrbP1@SP-Spawner]
 Object = O-OrbP1
+
+															;ORB P2
 
 [SP-OrbP2@SP-Spawner]
 Object = O-OrbP2
 
+															;MEDUSSA HEAD P1
+
 [SP-MedussaHeadP1@SP-Spawner]
 Object = O-MedussaHeadP1
+
+															;MEDUSSA HEAD P2
 
 [SP-MedussaHeadP2@SP-Spawner]
 Object = O-MedussaHeadP2
 
+															;GRENADE P1
+
 [SP-GrenadeP1@SP-Spawner]
 Object = O-GrenadeP1
+
+															;GRENADE P2
 
 [SP-GrenadeP2@SP-Spawner]
 Object = O-GrenadeP2
 
+															;SHRAPNEL
+
 [SP-Shrapnel@SP-Spawner]
 CleanOnDelete = false
+
+															;SHRAPNEL P1
 
 [SP-ShrapnelP1@SP-Shrapnel]
 Object = O-ShrapnelP1
 
+															;SHRAPNEL P2
+
 [SP-ShrapnelP2@SP-Shrapnel]
 Object = O-ShrapnelP2
+
+															;PRISM
 
 [SP-Prism@SP-Spawner]
 UseRotation = false
 
+															;PRISM P1
+
 [SP-PrismP1@SP-Prism]
 Object = O-PrismP1
+
+															;PRISM P2
 
 [SP-PrismP2@SP-Prism]
 Object = O-PrismP2
 
+															;TURRET P1
+
 [SP-TurretP1@SP-Spawner]
 Object = O-TurretP1
+
+															;TURRET P2
 
 [SP-TurretP2@SP-Spawner]
 Object = O-TurretP2
 
+															;BEAM
+
 [SP-Beam@SP-Spawner]
 UseSelfAsParent = true
+
+															;BEAM P1
 
 [SP-BeamP1@SP-Beam]
 Object = O-BeamP1
 
+															;BEAM P2
+
 [SP-BeamP2@SP-Beam]
 Object = O-BeamP2
+
+															;FAMILIAR P1
 
 [SP-FamiliarP1@SP-Spawner]
 Object = O-FamiliarP1
 
+															;FAMILIAR P2
+
 [SP-FamiliarP2@SP-Spawner]
 Object = O-FamiliarP2
+
+															;PUPPET P1
 
 [SP-PuppetP1@SP-Spawner]
 Object = O-PuppetP1
 
+															;PUPPET P2
+
 [SP-PuppetP2@SP-Spawner]
 Object = O-PuppetP2
+
+															;SPACER
 
 [SP-Spacer@SP-Spawner]
 IgnoreFromParent = rotation
 
+															;SPACER P1
+
 [SP-SpacerP1@SP-Spacer]
 Object = O-SpacerP1
 
+															;SPACER P2
+
 [SP-SpacerP2@SP-Spacer]
 Object = O-SpacerP2
+
+															;TURRET LASER
 
 [SP-TurretLaser@SP-Spawner]
 CleanOnDelete = false
@@ -117,11 +187,17 @@ UseRelativeSpeed = false
 UseSelfAsParent = false
 IgnoreFromParent = none
 
+															;TURRET LASER P1
+
 [SP-TurretLaserP1@SP-TurretLaser]
 Object = O-LaserP1
 
+															;TURRET LASER P2
+
 [SP-TurretLaserP2@SP-TurretLaser]
 Object = O-LaserP2
+
+															;FAMILIAR LASER
 
 [SP-FamiliarLaser@SP-Spawner]
 CleanOnDelete = false
@@ -140,11 +216,17 @@ UseRelativeSpeed = false
 UseSelfAsParent = false
 IgnoreFromParent = none
 
+															;FAMILIAR LASER P1
+
 [SP-FamiliarLaserP1@SP-FamiliarLaser]
 Object = O-LaserP1
 
+															;FAMILIAR LASER P2
+
 [SP-FamiliarLaserP2@SP-FamiliarLaser]
 Object = O-LaserP2
+
+															;PRISM LASER
 
 [SP-PrismLaser@SP-Spawner]
 CleanOnDelete = false
@@ -163,11 +245,17 @@ UseRelativeSpeed = false
 UseSelfAsParent = false
 IgnoreFromParent = rotation
 
+															;PRISM LASER P1
+
 [SP-PrismLaserP1@SP-PrismLaser]
 Object = O-LaserPrismP1
 
+															;PRISM LASER P2
+
 [SP-PrismLaserP2@SP-PrismLaser]
 Object = O-LaserPrismP2
+
+															;SPACER LASER 1
 
 [SP-SpacerLaser1@SP-Spawner]
 ObjectSpeed = (0.2, 0.0, 0.0)
@@ -187,11 +275,17 @@ UseRelativeSpeed = true
 UseSelfAsParent = false
 IgnoreFromParent = none
 
+															;SPACER LASER 1 P1
+
 [SP-SpacerLaser1P1@SP-SpacerLaser1]
 Object = O-LaserRotatedP1
 
+															;SPACER LASER 1 P2
+
 [SP-SpacerLaser1P2@SP-SpacerLaser1]
 Object = O-LaserRotatedP2
+
+															;SPACER LASER 2
 
 [SP-SpacerLaser2@SP-Spawner]
 ObjectSpeed = (0.2, 0.0, 0.0)
@@ -211,11 +305,17 @@ UseRelativeSpeed = true
 UseSelfAsParent = false
 IgnoreFromParent = none
 
+															;SPACER LASER 2 P1
+
 [SP-SpacerLaser2P1@SP-SpacerLaser2]
 Object = O-LaserRotatedP1
 
+															;SPACER LASER 2 P2
+
 [SP-SpacerLaser2P2@SP-SpacerLaser2]
 Object = O-LaserRotatedP2
+
+															;SPACER LASER 3
 
 [SP-SpacerLaser3@SP-Spawner]
 ObjectSpeed = (0.2, 0.0, 0.0)
@@ -235,13 +335,17 @@ UseRelativeSpeed = true
 UseSelfAsParent = false
 IgnoreFromParent = none
 
+															;SPACER LASER 3 P1
+
 [SP-SpacerLaser3P1@SP-SpacerLaser3]
 Object = O-LaserRotatedP1
+
+															;SPACER LASER 3 P2
 
 [SP-SpacerLaser3P2@SP-SpacerLaser3]
 Object = O-LaserRotatedP2
 
-; Guns
+															;GUN
 
 [O-Gun@O-Spawner]
 Body = B-Gun
@@ -256,269 +360,447 @@ Type = box
 TopLeft = (-5, -5, 0)
 BottomRight = (5, 5, 0)
 
+															;NEUTRAL GUN
+
 [O-NeutralGun@O-Gun]
 Position = (0.0, -0.5, 0.0)
+
+															;UPWARD GUN
 
 [O-UpwardGun@O-Gun]
 Position = (-0.5, 0.0, 0.0)
 
+															;DOWNWARD GUN
+
 [O-DownwardGun@O-Gun]
 Position = (0.5, 0.0, 0.0)
+
+															;SUPER GUN
 
 [O-SuperGun@O-Gun]
 Position = (0.0, 0.0, 0.0)
 
+															;GRENADE GUN
+
 [O-GrenadeGun@O-Spawner]
 Position = (0.0, 0.0, 0.0)
+
+															;TURRET GUN
 
 [O-TurretGun@O-Spawner]
 Position = (0.0, -0.5, 0.0)
 
+															;FAMILIAR GUN
+
 [O-FamiliarGun@O-Spawner]
 Position = (0.0, -0.5, 0.0)
+
+															;PRISM GUN
 
 [O-PrismGun@O-Spawner]
 Position = (0.0, 0.0, 0.0)
 
+															;SPACER GUN 1
+
 [O-SpacerGun1@O-Spawner]
 Position = (0.5, 0.0, 0.0)
+
+															;SPACER GUN 2
 
 [O-SpacerGun2@O-Spawner]
 Position = (0.0, 0.5, 0.0)
 
+															;SPACER GUN 3
+
 [O-SpacerGun3@O-Spawner]
 Position = (-0.5, 0.0, 0.0)
+
+															;SPACER GUN 1 P1
 
 [O-SpacerGun1P1@O-SpacerGun1]
 Spawner = SP-SpacerLaser1P1
 
+															;SPACER GUN 2 P1
+
 [O-SpacerGun2P1@O-SpacerGun2]
 Spawner = SP-SpacerLaser2P1
+
+															;SPACER GUN 3 P1
 
 [O-SpacerGun3P1@O-SpacerGun3]
 Spawner = SP-SpacerLaser3P1
 
+															;SPACER GUN 1 P2
+
 [O-SpacerGun1P2@O-SpacerGun1]
 Spawner = SP-SpacerLaser1P2
+
+															;SPACER GUN 2 P2
 
 [O-SpacerGun2P2@O-SpacerGun2]
 Spawner = SP-SpacerLaser2P2
 
+															;SPACER GUN 3 P2
+
 [O-SpacerGun3P2@O-SpacerGun3]
 Spawner = SP-SpacerLaser3P2
+
+															;NEUTRAL GUN 1 P1
 
 [O-NeutralGun1P1@O-NeutralGun]
 Spawner = SP-LaserP1
 
+															;UPWARD GUN 1 P1
+
 [O-UpwardGun1P1@O-UpwardGun]
 Spawner = SP-OrbP1
+
+															;DOWNWARD GUN 1 P1
 
 [O-DownwardGun1P1@O-DownwardGun]
 Spawner = SP-LaserP1
 
+															;SUPER GUN 1 P1
+
 [O-SuperGun1P1@O-SuperGun]
 Spawner = SP-LaserP1
+
+															;NEUTRAL GUN 1 P2
 
 [O-NeutralGun1P2@O-NeutralGun]
 Spawner = SP-LaserP2
 
+															;UPWARD GUN 1 P2
+
 [O-UpwardGun1P2@O-UpwardGun]
 Spawner = SP-OrbP2
+
+															;DOWNWARD GUN 1 P2
 
 [O-DownwardGun1P2@O-DownwardGun]
 Spawner = SP-LaserP2
 
+															;SUPER GUN 1 P2
+
 [O-SuperGun1P2@O-SuperGun]
 Spawner = SP-LaserP2
+
+															;NEUTRAL GUN 2 P1
 
 [O-NeutralGun2P1@O-NeutralGun]
 Spawner = SP-LaserWallP1
 
+															;UPWARD GUN 2 P1
+
 [O-UpwardGun2P1@O-UpwardGun]
 Spawner = SP-LaserHeatseekingP1
+
+															;DOWNWARD GUN 2 P1
 
 [O-DownwardGun2P1@O-DownwardGun]
 Spawner = SP-LaserP1
 
+															;SUPER GUN 2 P1
+
 [O-SuperGun2P1@O-SuperGun]
 Spawner = SP-OrbP1
+
+															;NEUTRAL GUN 2 P2
 
 [O-NeutralGun2P2@O-NeutralGun]
 Spawner = SP-LaserWallP2
 
+															;UPWARD GUN 2 P2
+
 [O-UpwardGun2P2@O-UpwardGun]
 Spawner = SP-LaserHeatseekingP2
+
+															;DOWNWARD GUN 2 P2
 
 [O-DownwardGun2P2@O-DownwardGun]
 Spawner = SP-LaserP2
 
+															;SUPER GUN 2 P2
+
 [O-SuperGun2P2@O-SuperGun]
 Spawner = SP-OrbP2
+
+															;NEUTRAL GUN 3 P1
 
 [O-NeutralGun3P1@O-NeutralGun]
 Spawner = SP-LaserP1
 
+															;UPWARD GUN 3 P1
+
 [O-UpwardGun3P1@O-UpwardGun]
 Spawner = SP-TurretP1
+
+															;DOWNWARD GUN 3 P1
 
 [O-DownwardGun3P1@O-DownwardGun]
 Spawner = SP-BeamP1
 
+															;SUPER GUN 3 P1
+
 [O-SuperGun3P1@O-SuperGun]
 Spawner = SP-LaserWallP1
+
+															;NEUTRAL GUN 3 P2
 
 [O-NeutralGun3P2@O-NeutralGun]
 Spawner = SP-LaserP2
 
+															;UPWARD GUN 3 P2
+
 [O-UpwardGun3P2@O-UpwardGun]
 Spawner = SP-TurretP2
+
+															;DOWNWARD GUN 3 P2
 
 [O-DownwardGun3P2@O-DownwardGun]
 Spawner = SP-BeamP2
 
+															;SUPER GUN 3 P2
+
 [O-SuperGun3P2@O-SuperGun]
 Spawner = SP-LaserWallP2
+
+															;NEUTRAL GUN 4 P1
 
 [O-NeutralGun4P1@O-NeutralGun]
 Spawner = SP-OrbP1
 
+															;UPWARD GUN 4 P1
+
 [O-UpwardGun4P1@O-UpwardGun]
 Spawner = SP-PuppetP1
+
+															;DOWNWARD GUN 4 P1
 
 [O-DownwardGun4P1@O-DownwardGun]
 Spawner = SP-BeamP1
 
+															;SUPER GUN 4 P1
+
 [O-SuperGun4P1@O-SuperGun]
 Spawner = SP-PuppetP1
+
+															;NEUTRAL GUN 4 P2
 
 [O-NeutralGun4P2@O-NeutralGun]
 Spawner = SP-OrbP2
 
+															;UPWARD GUN 4 P2
+
 [O-UpwardGun4P2@O-UpwardGun]
 Spawner = SP-PuppetP2
+
+															;DOWNWARD GUN 4 P2
 
 [O-DownwardGun4P2@O-DownwardGun]
 Spawner = SP-BeamP2
 
+															;SUPER GUN 4 P2
+
 [O-SuperGun4P2@O-SuperGun]
 Spawner = SP-PuppetP2
+
+															;NEUTRAL GUN 5 P1
 
 [O-NeutralGun5P1@O-NeutralGun]
 Spawner = SP-MedussaHeadP1
 
+															;UPWARD GUN 5 P1
+
 [O-UpwardGun5P1@O-UpwardGun]
 Spawner = SP-GrenadeP1
+
+															;DOWNWARD GUN 5 P1
 
 [O-DownwardGun5P1@O-DownwardGun]
 Spawner = SP-LaserP1
 
+															;SUPER GUN 5 P1
+
 [O-SuperGun5P1@O-SuperGun]
 Spawner = SP-LaserP1
+
+															;NEUTRAL GUN 5 P2
 
 [O-NeutralGun5P2@O-NeutralGun]
 Spawner = SP-MedussaHeadP2
 
+															;UPWARD GUN 5 P2
+
 [O-UpwardGun5P2@O-UpwardGun]
 Spawner = SP-GrenadeP2
+
+															;DOWNWARD GUN 5 P2
 
 [O-DownwardGun5P2@O-DownwardGun]
 Spawner = SP-LaserP2
 
+															;SUPER GUN 5 P2
+
 [O-SuperGun5P2@O-SuperGun]
 Spawner = SP-LaserP2
+
+															;NEUTRAL GUN 6 P1
 
 [O-NeutralGun6P1@O-NeutralGun]
 Spawner = SP-LaserP1
 
+															;UPWARD GUN 6 P1
+
 [O-UpwardGun6P1@O-UpwardGun]
 Spawner = SP-FamiliarP1
+
+															;DOWNWARD GUN 6 P1
 
 [O-DownwardGun6P1@O-DownwardGun]
 Spawner = SP-FamiliarP1
 
+															;SUPER GUN 6 P1
+
 [O-SuperGun6P1@O-SuperGun]
 Spawner = SP-FamiliarP1
+
+															;NEUTRAL GUN 6 P2
 
 [O-NeutralGun6P2@O-NeutralGun]
 Spawner = SP-LaserP2
 
+															;UPWARD GUN 6 P2
+
 [O-UpwardGun6P2@O-UpwardGun]
 Spawner = SP-FamiliarP2
+
+															;DOWNWARD GUN 6 P2
 
 [O-DownwardGun6P2@O-DownwardGun]
 Spawner = SP-FamiliarP2
 
+															;SUPER GUN 6 P2
+
 [O-SuperGun6P2@O-SuperGun]
 Spawner = SP-FamiliarP2
+
+															;NEUTRAL GUN 7 P1
 
 [O-NeutralGun7P1@O-NeutralGun]
 Spawner = SP-LaserP1
 
+															;UPWARD GUN 7 P1
+
 [O-UpwardGun7P1@O-UpwardGun]
 Spawner = SP-OrbP1
+
+															;DOWNWARD GUN 7 P1
 
 [O-DownwardGun7P1@O-DownwardGun]
 Spawner = SP-PrismP1
 
+															;SUPER GUN 7 P1
+
 [O-SuperGun7P1@O-SuperGun]
 Spawner = SP-SpacerP1
+
+															;NEUTRAL GUN 7 P2
 
 [O-NeutralGun7P2@O-NeutralGun]
 Spawner = SP-LaserP2
 
+															;UPWARD GUN 7 P2
+
 [O-UpwardGun7P2@O-UpwardGun]
 Spawner = SP-OrbP2
+
+															;DOWNWARD GUN 7 P2
 
 [O-DownwardGun7P2@O-DownwardGun]
 Spawner = SP-PrismP2
 
+															;SUPER GUN 7 P2
+
 [O-SuperGun7P2@O-SuperGun]
 Spawner = SP-SpacerP2
+
+															;NEUTRAL GUN 8 P1
 
 [O-NeutralGun8P1@O-NeutralGun]
 Spawner = SP-BeamP1
 
+															;UPWARD GUN 8 P1
+
 [O-UpwardGun8P1@O-UpwardGun]
 Spawner = SP-BeamP1
+
+															;DOWNWARD GUN 8 P1
 
 [O-DownwardGun8P1@O-DownwardGun]
 Spawner = SP-LaserGateP1
 
+															;SUPER GUN 8 P1
+
 [O-SuperGun8P1@O-SuperGun]
 Spawner = SP-TurretP1
+
+															;NEUTRAL GUN 8 P2
 
 [O-NeutralGun8P2@O-NeutralGun]
 Spawner = SP-BeamP2
 
+															;UPWARD GUN 8 P2
+
 [O-UpwardGun8P2@O-UpwardGun]
 Spawner = SP-BeamP2
+
+															;DOWNWARD GUN 8 P2
 
 [O-DownwardGun8P2@O-DownwardGun]
 Spawner = SP-LaserGateP2
 
+															;SUPER GUN 8 P2
+
 [O-SuperGun8P2@O-SuperGun]
 Spawner = SP-TurretP2
+
+															;TURRET GUN P1
 
 [O-TurretGunP1@O-TurretGun]
 Spawner = SP-TurretLaserP1
 
+															;TURRET GUN P2
+
 [O-TurretGunP2@O-TurretGun]
 Spawner = SP-TurretLaserP2
+
+															;GRENADE GUN P1
 
 [O-GrenadeGunP1@O-GrenadeGun]
 Spawner = SP-ShrapnelP1
 
+															;GRENADE GUN P2
+
 [O-GrenadeGunP2@O-GrenadeGun]
 Spawner = SP-ShrapnelP2
+
+															;FAMILIAR GUN P1
 
 [O-FamiliarGunP1@O-FamiliarGun]
 Spawner = SP-FamiliarLaserP1
 
+															;FAMILIAR GUN P2
+
 [O-FamiliarGunP2@O-FamiliarGun]
 Spawner = SP-FamiliarLaserP2
 
+															;PRISM GUN P1
+
 [O-PrismGunP1@O-PrismGun]
 Spawner = SP-PrismLaserP1
+
+															;PRISM GUN P2
 
 [O-PrismGunP2@O-PrismGun]
 Spawner = SP-PrismLaserP2
