--- a/data/config/TimelineTrack.ini
+++ b/data/config/TimelineTrack.ini
@@ -1,3 +1,5 @@
+															;IFRAMES FLASH
+
 ; Ensure that this track lasts exactly as long as @O-Pilot.MaxIFrames * 60.
 [TT-IFramesFlash]
 0.00 = Object.AddShader ^ SH-ColorWhite
@@ -7,21 +9,29 @@
 0.40 = Object.AddShader ^ SH-ColorWhite
 0.50 = Object.RemoveShader ^ SH-ColorWhite
 
-; Scene Tracks
+															;STORE SCENE
 
 [TT-StoreScene]
 0 = Set Runtime Scene ^
 
+															;MOVE OUT
+
 [TT-MoveOut]
 0 = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-ScrollLeft
+
+															;MOVE IN
 
 [TT-MoveIn]
 0 = Object.SetPosition ^ (-1920, 0)
 0.6 = Object.AddFX ^ FX-ScrollRight
 
+															;SPIRAL OUT
+
 [TT-SpiralOut]
-0 = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-SpiraleOutFX
+0 = Object.SetLifeTime ^ fx, Object.AddFX ^ FX-SpiralOut
+
+															;SPIRAL IN
 
 [TT-SpiralIn]
 0 = Object.SetScale ^ 0.00001
-1.2 = Object.AddFX ^ FX-SpiraleInFX
+1.2 = Object.AddFX ^ FX-SpiralIn
