--- a/data/config/Crosshairs.ini
+++ b/data/config/Crosshairs.ini
@@ -1,3 +1,5 @@
+															;Crosshairs
+
 [O-Crosshairs]
 Group = effect
 Position = @Commands.CalculatePosition
@@ -12,11 +14,15 @@ MaxMissileSpawnInterval = 1.0
 [G-Crosshairs]
 Pivot = center
 
+															;CROSSHAIRS P1
+
 [O-CrosshairsP1@O-Crosshairs]
 Graphic = G-CrosshairsP1
 
 [G-CrosshairsP1@G-Crosshairs]
 Texture = SpaceShooterRedux/PNG/Lasers/laserBlue08.png
+
+															;CROSSHAIRS P2
 
 [O-CrosshairsP2@O-Crosshairs]
 Graphic = G-CrosshairsP2
