--- a/data/config/Hexpatriates.ini
+++ b/data/config/Hexpatriates.ini
@@ -81,6 +81,21 @@ JOY_X_2 = NeutralP2
 JOY_Y_2 = UpwardP2
 JOY_A_2 = DownwardP2
 JOY_B_2 = SuperP2
+
+[GenericInput]
+Pause = Pause
+Left = Left
+Right = Right
+LeftRight = LeftRight
+Up = Up
+Down = Down
+UpDown = UpDown
+Dash = Dash
+Parry = Parry
+Neutral = Neutral
+Upward = Upward
+Downward = Downward
+Super = Super
  
 [MainViewport]
 Camera = MainCamera
@@ -91,7 +106,24 @@ FrustumHeight = 1080
 FrustumFar = 2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
 FrustumNear = -2.0 ; Using 2.0 and -2.0 for FrustumFar and FrustumNear to give myself a substantial margin on either side when operating between 1.0 and -1.0.
 GroupList = default # geometry # icon # projectileLarge # ship # pilot # projectileTethered # projectileMedium # projectileSmall # effect # ui
+	
+[Commands]
+CalculatePosition = % > @, > Get < Depth, > Get Depths <, > @, > Get < Pos, + < (0, 0, <)
+CalculatePauseInput = % > @, > Get < PlayerType, > Get GenericInput Pause, Return "<<"
+CalculateLeftInput = % > @, > Get < PlayerType, > Get GenericInput Left, Return "<<"
+CalculateRightInput = % > @, > Get < PlayerType, > Get GenericInput Right, Return "<<"
+CalculateLeftRightInput = % > @, > Get < PlayerType, > Get GenericInput LeftRight, Return "<<"
+CalculateUpInput = % > @, > Get < PlayerType, > Get GenericInput Up, Return "<<"
+CalculateDownInput = % > @, > Get < PlayerType, > Get GenericInput Down, Return "<<"
+CalculateUpDownInput = % > @, > Get < PlayerType, > Get GenericInput UpDown, Return "<<"
+CalculateDashInput = % > @, > Get < PlayerType, > Get GenericInput Dash, Return "<<"
+CalculateParryInput = % > @, > Get < PlayerType, > Get GenericInput Parry, Return "<<"
+CalculateNeutralInput = % > @, > Get < PlayerType, > Get GenericInput Neutral, Return "<<"
+CalculateUpwardInput = % > @, > Get < PlayerType, > Get GenericInput Upward, Return "<<"
+CalculateDownwardInput = % > @, > Get < PlayerType, > Get GenericInput Downward, Return "<<"
+CalculateSuperInput = % > @, > Get < PlayerType, > Get GenericInput Super, Return "<<"
 
+;These values are listed in the order in which they're to be drawn, but their numerical values may not reflect this because of the occasional usage of parent space.
 [Depths]
 ;GEOMETRY
 	O-Partition = 1
@@ -134,13 +166,12 @@ GroupList = default # geometry # icon # projectileLarge # ship # pilot # project
 	O-LaserPortal = 0.33
 	O-Crosshairs = 0
 ;UI #
-	O-Text = -1
-	O-Meter = 0.66
-	O-MeterBorder = 0.33
+	O-Meter = 1
+	O-MeterBorder = 1.5
+	O-ScenePause = -0.5
+	O-Text = -0.1
+	O-TextMenu = -1
 	O-Fade = 0
-	
-[Commands]
-CalculatePosition = % > @, > Get < Depth, > Get Depths <, > @, > Get < Pos, + < (0, 0, <)
 
 ; Joints
 
