--- a/data/config/Scene.ini
+++ b/data/config/Scene.ini
@@ -1,24 +1,35 @@
+															;SCENE
+
 [O-Scene]
 Pivot = center
 Size = (1920, 1080, 0.1)
 TrackList = TT-StoreScene
 
-; PAUSE MENU
+															;SCENE PAUSE
 
 [O-ScenePause@O-Scene]
+Group = ui
 Graphic = G-ScenePause
+Position = @Commands.CalculatePosition
 Pausable = false
 ChildList = O-ContinueText # O-RestartMatchText # O-ExitText # O-QuitText
+;User-Defined
+Pos = (0, 0)
+Depth = O-ScenePause
 
 [G-ScenePause]
 Texture = SpaceShooterRedux/Backgrounds/darkPurple.png
 
-[O-ScenePauseText@O-Text]
+															;SCENE PAUSE TEXT
+
+[O-ScenePauseText@O-TextMenu]
 Scale = (5, 5, 1)
 UseParentSpace = position
 
 [G-ScenePauseText]
 Pivot = center
+
+															;CONTINUE TEXT
 
 [O-ContinueText@O-ScenePauseText]
 Graphic = G-ContinueText
@@ -32,6 +43,8 @@ Text = T-ContinueText
 [T-ContinueText]
 String = Continue
 
+															;RESTART MATCH TEXT
+
 [O-RestartMatchText@O-ScenePauseText]
 Graphic = G-RestartMatchText
 ;User-Defined
@@ -42,6 +55,8 @@ Text = T-RestartMatchText
 
 [T-RestartMatchText]
 String = Restart Match
+
+															;EXIT TEXT
 
 [O-ExitText@O-ScenePauseText]
 Graphic = G-ExitText
@@ -54,6 +69,8 @@ Text = T-ExitText
 [T-ExitText]
 String = Exit to Main Menu
 
+															;QUIT TEXT
+
 [O-QuitText@O-ScenePauseText]
 Graphic = G-QuitText
 ;User-Defined
@@ -65,7 +82,7 @@ Text = T-QuitText
 [T-QuitText]
 String = Quit to Desktop
 
-; MAIN MENU
+															;SCENE MAIN
 
 [O-SceneMain@O-Scene]
 Graphic = G-SceneMain
@@ -74,12 +91,16 @@ ChildList = O-ArcadeText # O-VersusText # O-OnlinePlayText # O-TrainingText # O-
 [G-SceneMain]
 Texture = SpaceShooterRedux/Backgrounds/darkPurple.png
 
-[O-SceneMainText@O-Text]
+															;SCENE MAIN TEXT
+
+[O-SceneMainText@O-TextMenu]
 Scale = (5, 5, 1)
 UseParentSpace = position
 
 [G-SceneMainText]
 Pivot = left
+
+															;ARCADE TEXT
 
 [O-ArcadeText@O-SceneMainText]
 Graphic = G-ArcadeText
@@ -93,6 +114,8 @@ Text = T-ArcadeText
 [T-ArcadeText]
 String = Arcade
 
+															;VERSUS TEXT
+
 [O-VersusText@O-SceneMainText]
 Graphic = G-VersusText
 ;User-Defined
@@ -103,6 +126,8 @@ Text = T-VersusText
 
 [T-VersusText]
 String = VS
+
+															;ONLINE PLAY TEXT
 
 [O-OnlinePlayText@O-SceneMainText]
 Graphic = G-OnlinePlayText
@@ -115,6 +140,8 @@ Text = T-OnlinePlayText
 [T-OnlinePlayText]
 String = Online Play
 
+															;TRAINING TEXT
+
 [O-TrainingText@O-SceneMainText]
 Graphic = G-TrainingText
 ;User-Defined
@@ -125,6 +152,8 @@ Text = T-TrainingText
 
 [T-TrainingText]
 String = Training
+
+															;SETTINGS TEXT
 
 [O-SettingsText@O-SceneMainText]
 Graphic = G-SettingsText
@@ -137,7 +166,7 @@ Text = T-SettingsText
 [T-SettingsText]
 String = Settings
 
-; PILOT SELECT MENU
+															;SCENE PILOT SELECT
 
 [O-ScenePilotSelect@O-Scene]
 Graphic = G-ScenePilotSelect
@@ -146,7 +175,7 @@ ChildList = O-PilotSelectIcon1 # O-PilotSelectIcon2 # O-PilotSelectIcon3 # O-Pil
 [G-ScenePilotSelect]
 Texture = SpaceShooterRedux/Backgrounds/purple.png
 
-; ARENA
+															;SCENE ARENA
 
 [O-SceneArena@O-Scene]
 ChildList = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMeterP1 # O-NeutralMeterP1 # O-UpwardMeterP1 # O-DownwardMeterP1 # O-SuperMeterP1 # O-DashMeterP2 # O-ParryMeterP2 # O-LivesMeterP2 # O-NeutralMeterP2 # O-UpwardMeterP2 # O-DownwardMeterP2 # O-SuperMeterP2 # O-TimerText
@@ -154,16 +183,22 @@ ChildList = O-Walls # O-Partition # O-DashMeterP1 # O-ParryMeterP1 # O-LivesMete
 PilotP1 = O-Pilot1P1
 PilotP2 = O-Pilot1P2
 
+															;METER
+
 [O-Meter@O-UI]
 Group = ui
 ;User-Defined
 Depth = O-Meter
+
+															;DASH METER
 
 [O-DashMeter@O-Meter]
 Scale = (0.072, 0.0375, 1.0)
 
 [G-DashMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+															;DASH METER P1
 
 [O-DashMeterP1@O-DashMeter]
 Graphic = G-DashMeterP1
@@ -173,6 +208,8 @@ Pos = (-0.05, -0.475)
 [G-DashMeterP1@G-DashMeter]
 Pivot = right
 
+															;DASH METER P2
+
 [O-DashMeterP2@O-DashMeter]
 Graphic = G-DashMeterP2
 ;User-Defined
@@ -181,11 +218,15 @@ Pos = (0.05, -0.475)
 [G-DashMeterP2@G-DashMeter]
 Pivot = left
 
+															;PARRY METER
+
 [O-ParryMeter@O-Meter]
 Scale = (0.072, 0.0375, 1.0)
 
 [G-ParryMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+															;PARRY METER P1
 
 [O-ParryMeterP1@O-ParryMeter]
 Graphic = G-ParryMeterP1
@@ -195,6 +236,8 @@ Pos = (-0.1445, -0.475)
 [G-ParryMeterP1@G-ParryMeter]
 Pivot = right
 
+															;PARRY METER P2
+
 [O-ParryMeterP2@O-ParryMeter]
 Graphic = G-ParryMeterP2
 ;User-Defined
@@ -203,11 +246,15 @@ Pos = (0.1445, -0.475)
 [G-ParryMeterP2@G-ParryMeter]
 Pivot = left
 
+															;LIVES METER
+
 [O-LivesMeter@O-Meter]
 Scale = (0.072, 0.025, 1.0)
 
 [G-LivesMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonRed.png
+
+															;LIVES METER P1
 
 [O-LivesMeterP1@O-LivesMeter]
 Graphic = G-LivesMeterP1
@@ -217,6 +264,8 @@ Pos = (-0.05, -0.39375)
 [G-LivesMeterP1@G-LivesMeter]
 Pivot = right
 
+															;LIVES METER P2
+
 [O-LivesMeterP2@O-LivesMeter]
 Graphic = G-LivesMeterP2
 ;User-Defined
@@ -225,11 +274,15 @@ Pos = (0.05, -0.39375)
 [G-LivesMeterP2@G-LivesMeter]
 Pivot = left
 
+															;NEUTRAL METER
+
 [O-NeutralMeter@O-Meter]
 Scale = (0.072, 0.0375, 1.0)
 
 [G-NeutralMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+															;NEUTRAL METER P1
 
 [O-NeutralMeterP1@O-NeutralMeter]
 Graphic = G-NeutralMeterP1
@@ -239,6 +292,8 @@ Pos = (-0.239, -0.475)
 [G-NeutralMeterP1@G-NeutralMeter]
 Pivot = right
 
+															;NEUTRAL METER P2
+
 [O-NeutralMeterP2@O-NeutralMeter]
 Graphic = G-NeutralMeterP2
 ;User-Defined
@@ -247,11 +302,15 @@ Pos = (0.239, -0.475)
 [G-NeutralMeterP2@G-NeutralMeter]
 Pivot = left
 
+															;UPWARD METER
+
 [O-UpwardMeter@O-Meter]
 Scale = (0.072, 0.0375, 1.0)
 
 [G-UpwardMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+															;UPWARD METER P1
 
 [O-UpwardMeterP1@O-UpwardMeter]
 Graphic = G-UpwardMeterP1
@@ -261,6 +320,8 @@ Pos = (-0.3335, -0.475)
 [G-UpwardMeterP1@G-UpwardMeter]
 Pivot = right
 
+															;UPWARD METER P2
+
 [O-UpwardMeterP2@O-UpwardMeter]
 Graphic = G-UpwardMeterP2
 ;User-Defined
@@ -269,11 +330,15 @@ Pos = (0.3335, -0.475)
 [G-UpwardMeterP2@G-UpwardMeter]
 Pivot = left
 
+															;DOWNWARD METER
+
 [O-DownwardMeter@O-Meter]
 Scale = (0.072, 0.0375, 1.0)
 
 [G-DownwardMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonBlue.png
+
+															;DOWNWARD METER P1
 
 [O-DownwardMeterP1@O-DownwardMeter]
 Graphic = G-DownwardMeterP1
@@ -283,6 +348,8 @@ Pos = (-0.428, -0.475)
 [G-DownwardMeterP1@G-DownwardMeter]
 Pivot = right
 
+															;DOWNWARD METER P2
+
 [O-DownwardMeterP2@O-DownwardMeter]
 Graphic = G-DownwardMeterP2
 ;User-Defined
@@ -291,11 +358,15 @@ Pos = (0.428, -0.475)
 [G-DownwardMeterP2@G-DownwardMeter]
 Pivot = left
 
+															;SUPER METER
+
 [O-SuperMeter@O-Meter]
 Scale = (0.45, 0.0375, 1.0)
 
 [G-SuperMeter]
 Texture = SpaceShooterRedux/PNG/UI/buttonYellow.png
+
+															;SUPER METER P1
 
 [O-SuperMeterP1@O-SuperMeter]
 Graphic = G-SuperMeterP1
@@ -305,6 +376,8 @@ Pos = (-0.05, -0.43125)
 [G-SuperMeterP1@G-SuperMeter]
 Pivot = right
 
+															;SUPER METER P2
+
 [O-SuperMeterP2@O-SuperMeter]
 Graphic = G-SuperMeterP2
 ;User-Defined
@@ -313,11 +386,15 @@ Pos = (0.05, -0.43125)
 [G-SuperMeterP2@G-SuperMeter]
 Pivot = left
 
+															;METER BORDER
+
 [O-MeterBorder@O-UI]
 Group = ui
 ;User-Defined
 Pos = (0, 0)
 Depth = O-MeterBorder
+
+															;CLIP BORDER
 
 [O-ClipBorder@O-MeterBorder]
 Graphic = G-ClipBorder
@@ -328,19 +405,29 @@ Texture = SpaceShooterRedux/PNG/UI/buttonRed.png
 Pivot = center
 Color = (255, 0, 0)
 
+															;CLIP BORDER TOP
+
 [O-ClipBorderTop@O-ClipBorder]
 Scale = (0.072, 0.002, 1.0)
 Pivot = top
 
+															;CLIP BORDER LEFT
+
 [O-ClipBorderLeft@O-ClipBorder]
 Pivot = left
+
+															;CLIP BORDER BOTTOM
 
 [O-ClipBorderBottom@O-ClipBorder]
 Scale = @O-ClipBorderTop.Scale
 Pivot = bottom
 
+															;CLIP BORDER RIGHT
+
 [O-ClipBorderRight@O-ClipBorder]
 Pivot = right
+
+															;TIMER TEXT
 
 [O-TimerText@O-Text]
 Graphic = G-TimerText
@@ -355,27 +442,37 @@ Pivot = center
 [T-TimerText]
 String = 90
 
-; TRANSITIONS
+															;TO SCENE
 
 [O-ToScene]
 LifeTime = track
 TrackList = @
 
+															;TO SCENE PAUSE
+
 [O-ToScenePause@O-ToScene]
-0 = >> Get Runtime Scene, Set Runtime PreviousScene <, Object.SetPosition < (0, 0, 100) #
+0 = > Get Runtime Scene, Set Runtime PreviousScene < #
 	> Object.Create O-ScenePause, > Get Runtime PreviousScene, Object.SetOwner < <
+	
+															;TO SCENE MAIN
 
 [O-ToSceneMain@O-ToScene]
 0 = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneMain
 
+															;TO SCENE PILOT SELECT
+
 [O-ToScenePilotSelect@O-ToScene]
 0 = > Get Runtime Scene, Object.Delete <, Object.Create O-ScenePilotSelect
+
+															;TO SCENE ARENA
 
 [O-ToSceneArena@O-ToScene]
 0 = > Get Runtime Scene, Object.Delete <, Object.Create O-SceneArena
 
+															;TO SCENE ARENA FROM PAUSE
+
 [O-ToSceneArenaFromPause@O-ToScene]
-0 = > Get GUID Empty, >> Get Runtime PreviousScene, Object.SetPosition < (0, 0, 0), Object.SetOwner < < #
+0 = > Get GUID Empty, > Get Runtime PreviousScene, Object.SetOwner < < #
     > Get Runtime Scene, Object.Delete < #
 	>> Get Runtime PreviousScene, Object.RemoveTrack < TT-StoreScene, Object.AddTrack < TT-StoreScene
 
@@ -388,6 +485,8 @@ TrackList = @
 ;[O-ToSceneArena@O-ToScene]
 ;0 = Object.Create Fade
 ;0.5 = > Get Runtime Scene, Object.Delete <, > Object.Create O-SceneArena
+
+															;FADE
 
 [O-Fade]
 Group = ui
@@ -406,8 +505,12 @@ SlotList = FXS-FadeIn # FXS-FadeOut
 Pos = (0, 0)
 Depth = O-Fade
 
+															;TO SCENE CYAN
+
 [O-ToSceneCyan@O-ToScene]
 0 = > Get Runtime Scene, Object.AddTrack < TT-SpiralOut, > Object.Create O-ScenePilotSelect, Object.AddTrack < TT-SpiralIn
+
+															;TO SCENE BLUE
 
 [O-ToSceneBlue@O-ToScene]
 0 = >> Get Runtime Scene, Set Runtime Out <, Object.SetPosition < (0, 0, 200) #
@@ -416,6 +519,8 @@ Depth = O-Fade
     >  Object.Create O-SceneDissolve, Object.SetOwner < ^
 0.8 = >  Viewport.Get V-ViewportIn, Viewport.Delete <, > Viewport.Get V-ViewportOut, Viewport.Delete < #
       >  Get Runtime Out, Object.Delete <, > Get Runtime Scene, Object.SetPosition < (0, 0, 0)
+
+															;SCENE DISSOLVE															
 
 [O-SceneDissolve]
 Graphic = @
@@ -443,16 +548,24 @@ tex_out = TextureOut
 res = % Get Display FramebufferSize
 time = time
 
+															;VIEWPORT IN
+
 [V-ViewportIn]
 Camera = CA-CameraIn
 TextureList = TextureIn
 
+															;CAMERA IN
+
 [CA-CameraIn@MainCamera]
 Position = (0, 0, 100)
+
+															;VIEWPORT OUT
 
 [V-ViewportOut]
 Camera = CA-CameraOut
 TextureList = TextureOut
+
+															;CAMERA OUT
 
 [CA-CameraOut@MainCamera]
 Position = (0, 0, 200)
