--- a/data/config/UI.ini
+++ b/data/config/UI.ini
@@ -1,9 +1,19 @@
+															;UI
+
 [O-UI@ScrollObject]
 Position = @Commands.CalculatePosition
 ParentCamera = MainCamera ; Set MainCamera to be the parent of the UI element, thus binding them, and handling the latter in terms of camera space.
+
+															;TEXT
 
 [O-Text@ScrollObject]
 Group = ui
 Position = @Commands.CalculatePosition
 ;User-Defined
 Depth = O-Text
+
+															;TextMenu
+
+[O-TextMenu@O-Text]
+;User-Defined
+Depth = O-TextMenu
